@@ -44,6 +44,20 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-surefire-plugin</artifactId>
+			  <version>3.3.1</version><!--  config from parent pluginManagement is getting overridden -->
+			  <configuration>
+			    <skip>${skipTests}</skip>
+			    <includes>
+			      <include>**/*Tests.java</include>
+			    </includes>
+			    <forkCount>3</forkCount>
+			    <reuseForks>true</reuseForks>
+			    <argLine>-Xmx1024m --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.http=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.https=ALL-UNNAMED</argLine> <!-- DW  -XX:MaxPermSize=256m -->
+			  </configuration>
+			</plugin>
 		</plugins>
 	</build>
 
